--- a/working_model.ipynb
+++ b/working_model.ipynb
@@ -1497,7 +1497,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "For a dataset with diverse academic, demographic, and behavioral features as you have, starting with a tree-based ensemble method such as Random Forest or XGBoost is a solid choice. These algorithms are robust in handling missing values, unscaled data, and feature interactions, and they provide feature importance metrics which are valuable in an educational context for interpreting which factors most influence dropout risk.\n"
+        "For a dataset with diverse academic, demographic, and behavioral features , starting with a tree-based ensemble method such as Random Forest or XGBoost is a solid choice. These algorithms are robust in handling missing values, unscaled data, and feature interactions,they provide feature importance metrics which are valuable in an educational context for interpreting which factors most influence dropout risk.\n"
       ],
       "metadata": {
         "id": "NoQEfdG9fR6d"
